feat: Setup CI to publish images
feat: Remove publish

feat: on pull request

feat: trying

feat: move to workflows

feat: move to workflows

feat: move to workflows

feat: move to workflows

feat: move to workflows

feat: move to workflows

feat: move to workflows

feat: move to workflows

feat: github actiong

feat: github actiong

feat: github action

feat: github action

feat: github action

feat: github action

feat: github action

feat: github action

feat: Try again

feat: Try again

feat: Try again

feat: fromat

feat: more

feat: more

feat: more

feat: fix
gp

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: fix

feat: try

feat: resolve comments

feat: resolve comments

feat: fix

feat: fix

feat: runLint

feat: runLint

feat: runLint

feat: remove that thing

feat: missing terraform

feat: missing terraform

feat: missing terraform

feat: missing terraform

feat: underscores

feat: job

feat: try hardcoded

feat: try hardcoded

feat: try hardcoded

feat: try hardcoded