@@ -1,6 +1,7 @@
 import org.typelevel.sbt.tpolecat.TpolecatPlugin.autoImport.tpolecatScalacOptions
 import org.typelevel.scalacoptions.ScalacOptions
 import sbt.*
+import sbt.Keys.*
 
 object Settings {
 
@@ -42,5 +43,14 @@ object Settings {
       ignoreNotUsedAssertion,
       discardNonUnitAssertion,
     ),
+  )
+
+  lazy val JavaOptions = javaOptions ++= Seq(
+    "-Xmx2G",
+    "-XX:+UseZGC",
+    "-XX:+ZGenerational",
+    "-XX:+IgnoreUnrecognizedVMOptions",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
   )
 }
